--- a/styles/index.css
+++ b/styles/index.css
@@ -36,3 +36,15 @@
     border: 1px solid #c3e6cb;
     border-radius: 5px;
 }
+
+.header-title{
+    font-size: 40px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.header-subtitle{
+    font-size: 30px;
+    margin-bottom: 20px;
+    color: gray;
+}
