--- a/styles/index.css
+++ b/styles/index.css
@@ -37,14 +37,34 @@
     border-radius: 5px;
 }
 
-.header-title{
+.title {
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 10px;
 }
 
-.header-subtitle{
+.subtitle {
     font-size: 30px;
     margin-bottom: 20px;
     color: gray;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.grid-display,
+.code-display {
+    flex: 1;
+}
+
+.grid-display {
+    /* Optional: styling for the grid */
+    border-right: 1px solid white;
+}
+
+.code-display {
+    /* Optional: styling for the code section */
+    max-width: 700px;
 }
